Added image descriptions - "alt"

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                 </picture>
                 -->
                 <div class="gridbox mygridright clickwrap" onclick='window.open("https://www.pexels.com/photo/planet-earth-87651/");'>
-                    <img  src="img/universe1200x600.jpg" alt="img1">
+                    <img  src="img/universe1200x600.jpg" alt="This is an image of the universe.  A blue, purple and pink background with many bright stars.">
                 </div>
                     
                 <div class="gridboxcentertext">The universe an amazing place<br/>
@@ -196,10 +196,10 @@
         <div><!--Left--></div>
         <div class="mygrid">
             <div class="gridbox mygridright clickwrap" onclick='window.open("https://www.pexels.com/photo/planet-earth-87651/");'>
-                <img  src="img/earth600x600.jpg" alt="img1">
+                <img  src="img/earth600x600.jpg" alt="This is an image of the Earth from space.">
             </div>
             <div class="gridbox mygridleft clickwrap" onclick='window.open("https://www.pexels.com/photo/nature-forest-trees-park-38136/");'>
-                <img src="img/tree600x600.jpg" alt="img2">
+                <img src="img/tree600x600.jpg" alt="This is an image of a tree in the forest.">
             </div>
         </div>
         <div><!--Right--></div>
@@ -207,7 +207,7 @@
         <div><!--Left--></div>
         <div class="mygrid">
             <div class="gridbox clickwrap" onclick='window.open("https://pixabay.com/photos/solar-system-sun-mercury-venus-439046/");'>
-                <img src="img/planets1200x600.jpg" alt="img1">
+                <img src="img/planets1200x600.jpg" alt="This is an image of the solar system planets.">
             </div>
         </div>
         <div><!--Right--></div>
@@ -221,11 +221,11 @@
         <div><!--Left--></div>
         <div class="mygrid">
             <div class="gridbox mygridright clickwrap" onclick='window.open("https://www.pexels.com/photo/sky-space-telescope-universe-41951/");'>
-                <img src="img/galaxy1-600x600.jpg" alt="img1">
+                <img src="img/galaxy1-600x600.jpg" alt="This is an image of a redish orange cloudy object in space.">
                 <div class="gridboxcentertext">Amazing</div>
             </div>
             <div class="gridbox mygridleft clickwrap" onclick='window.open("https://www.pexels.com/photo/photo-of-deep-sky-object-816608/");'>
-                <img src="img/galaxy2-600x600.jpg" alt="img2">
+                <img src="img/galaxy2-600x600.jpg" alt="This is an image of a purpleish cloudy object in space.">
                 <div class="gridboxcentertext">Wondferful</div>
             </div>
         </div>
@@ -234,11 +234,11 @@
         <div><!--Left--></div>
         <div class="mygrid">
             <div class="gridbox mygridright clickwrap" onclick='window.open("https://www.pexels.com/photo/sky-space-dark-galaxy-2150/");'>
-                <img src="img/galaxy3-600x600.jpg" alt="img1">
+                <img src="img/galaxy3-600x600.jpg" alt="This is an image of a bright spiral galaxy in space.">
                 <div class="gridboxcentertext">Mysterious</div>
             </div>
             <div class="gridbox mygridleft clickwrap" onclick='window.open("https://unsplash.com/photos/rTZW4f02zY8");'>
-                <img src="img/galaxy4-600x600.jpg" alt="img2">
+                <img src="img/galaxy4-600x600.jpg" alt="This is an image of a blue and yellow round cloudy object in space.">
                 <div class="gridboxcentertext">Universe</div>
             </div>
         </div>  
